# serializer version: 1
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_meter_reading]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Zählerstand',
      'meter_number': '3000000',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'timestamp': '2026-06-28T00:15:00',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_meter_reading',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11000.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Einspeisung (aktueller 30-Tage-Trend)',
      'from': '2026-05-29T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 25.86666666666667,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-06-28T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '776.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Einspeisung (vorheriger 30-Tage-Trend)',
      'from': '2026-04-29T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 23.36666666666667,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-05-28T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '701.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Teilnahmefaktor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energiegemeinschaft Einspeisung L1/L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-import',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1000.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energiegemeinschaft Einspeisung L1/L2/L3',
      'icon': 'mdi:transmission-tower-import',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1000.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_energy_community_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energiegemeinschaft Einspeisung L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_energy_community_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_supplier_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energielieferant Einspeisung L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_supplier_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'revoked',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energielieferant Einspeisung L1/L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7000.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energielieferant Einspeisung L1/L2/L3',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7000.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_scale_type]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik (11111111) Typ',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_scale_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Gem.Erz. / Erzeugung',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_supplier]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik (11111111) Energielieferant',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_supplier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'OeMAG Abwicklungsstelle für Ökostrom AG',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Einspeisung (aktueller Jahres-Trend)',
      'from': '2025-05-31T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 12.30742191780822,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-05-31T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4492.209',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Einspeisung (vorheriger Jahres-Trend)',
      'from': '2024-05-31T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 11.90084109589041,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2025-05-30T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4343.807',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Teilnahmefaktor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '95',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energiegemeinschaft Bezug L1/L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26',
          'to': '2026-06-12',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '600.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energiegemeinschaft Bezug L1/L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-06-17',
          'to': '2026-06-28',
        }),
        dict({
          'from': '2026-01-26',
          'to': '2026-06-16',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '610.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energiegemeinschaft Bezug L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-05-01',
          'to': '2026-05-31',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energielieferant Netzbezug L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-05-01',
          'to': '2026-05-31',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'active',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energielieferant Netzbezug L1/L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26',
          'to': '2026-06-12',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '900.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energielieferant Netzbezug L1/L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-06-17',
          'to': '2026-06-28',
        }),
        dict({
          'from': '2026-01-26',
          'to': '2026-06-16',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '920.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_meter_reading]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Zählerstand',
      'meter_number': '3000000',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'timestamp': '2026-06-28T00:15:00',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_meter_reading',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '44000.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 0,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Netzbezug (aktueller 30-Tage-Trend)',
      'from': '2026-06-28T17:07:11.908040171',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 0.0,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-06-29T17:07:11.908040275',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 0,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Netzbezug (vorheriger 30-Tage-Trend)',
      'from': '2026-06-28T17:07:11.908037756',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 0.0,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-06-29T17:07:11.908038675',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Teilnahmefaktor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energiegemeinschaft Bezug L1/L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2024-05-07',
        }),
        dict({
          'from': '2024-09-10',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '352.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energiegemeinschaft Bezug L1/L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2024-05-07',
        }),
        dict({
          'from': '2024-09-10',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '352.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energiegemeinschaft Bezug L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energielieferant Netzbezug L2 (letzter Monat)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'revoked',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energielieferant Netzbezug L1/L2 (Stand: vor 16 Tagen)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2024-05-07',
        }),
        dict({
          'from': '2024-09-10',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3655.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energielieferant Netzbezug L1/L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2024-05-07',
        }),
        dict({
          'from': '2024-09-10',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3655.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_scale_type]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt (11111112) Typ',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_scale_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'EEG 7ngem',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_supplier]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt (11111112) Energielieferant',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_supplier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'EP Energie Plus GmbH',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 0,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Netzbezug (aktueller Jahres-Trend)',
      'from': '2026-06-28T17:07:11.908041578',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 0.0,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-06-29T17:07:11.908041679',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[de-sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 0,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Netzbezug (vorheriger Jahres-Trend)',
      'from': '2026-06-28T17:07:11.908041155',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 0.0,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-06-29T17:07:11.908041266',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_meter_reading]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Meter reading',
      'meter_number': '3000000',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'timestamp': '2026-06-28T00:15:00',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_meter_reading',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11000.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Monthly export trend (current period)',
      'from': '2026-05-29T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 25.86666666666667,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-06-28T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '776.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 30,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Monthly export trend (previous period)',
      'from': '2026-04-29T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 23.36666666666667,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-05-28T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_monthly_trend_export_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '701.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Contribution factor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energy community export L1/L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-import',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1000.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energy community export L1/L2/L3',
      'icon': 'mdi:transmission-tower-import',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_energy_community_export_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1000.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_energy_community_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Energy community export L2 (last month)',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_energy_community_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_supplier_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Supplier export L2 (last month)',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_last_month_supplier_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'revoked',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Supplier export L1/L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7000.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik: wseg 07614 0523 UW Partenstein (11111111) Supplier export L1/L2/L3',
      'icon': 'mdi:transmission-tower-import',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_rc100930_supplier_export_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7000.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_scale_type]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik (11111111) Type',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_scale_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Gem.Erz. / Erzeugung',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_supplier]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik (11111111) Supplier',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_supplier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'OeMAG Abwicklungsstelle für Ökostrom AG',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Yearly export trend (current period)',
      'from': '2025-05-31T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 12.30742191780822,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-05-31T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4492.209',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 365,
      'device_class': 'energy',
      'friendly_name': 'Photovoltaik (11111111) Yearly export trend (previous period)',
      'from': '2024-05-31T00:00:00',
      'icon': 'mdi:transmission-tower-import',
      'per_day': 11.90084109589041,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2025-05-30T23:59:59',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111111_yearly_trend_export_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4343.807',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Contribution factor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '95',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energy community import L1/L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26',
          'to': '2026-06-12',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '600.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energy community import L1/L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-06-17',
          'to': '2026-06-28',
        }),
        dict({
          'from': '2026-01-26',
          'to': '2026-06-16',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_energy_community_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '610.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Energy community import L2 (last month)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'ATCC9999DYNAMCC100087000000000002',
      'name': '7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-05-01',
          'to': '2026-05-31',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Supplier import L2 (last month)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-05-01',
          'to': '2026-05-31',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_last_month_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'active',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Supplier import L1/L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-01-26',
          'to': '2026-06-12',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '900.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: 7Energy - Bürgerenergiegemeinschaft für erneuerbaren Strom (11111112) Supplier import L1/L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2026-06-17',
          'to': '2026-06-28',
        }),
        dict({
          'from': '2026-01-26',
          'to': '2026-06-16',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_cc100087_supplier_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '920.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_meter_reading]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Meter reading',
      'meter_number': '3000000',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'timestamp': '2026-06-28T00:15:00',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_meter_reading',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '44000.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 0,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Monthly import trend (current period)',
      'from': '2026-06-28T17:07:11.908040171',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 0.0,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-06-29T17:07:11.908040275',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 0,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Monthly import trend (previous period)',
      'from': '2026-06-28T17:07:11.908037756',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 0.0,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-06-29T17:07:11.908038675',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_monthly_trend_import_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_contribution_factor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Contribution factor',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_contribution_factor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energy community import L1/L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-export',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2024-05-07',
        }),
        dict({
          'from': '2024-09-10',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '352.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energy community import L1/L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'id': 'AT00300000000RC100930000000965743',
      'name': 'wseg 07614 0523 UW Partenstein',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2024-05-07',
        }),
        dict({
          'from': '2024-09-10',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_energy_community_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '352.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_energy_community_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Energy community import L2 (last month)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_energy_community_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Supplier import L2 (last month)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_last_month_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'revoked',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Supplier import L1/L2 (16-day delay)',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2024-05-07',
        }),
        dict({
          'from': '2024-09-10',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3655.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Haushalt: wseg 07614 0523 UW Partenstein (11111112) Supplier import L1/L2/L3',
      'icon': 'mdi:transmission-tower-export',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'timeline': list([
        dict({
          'from': '2024-05-06',
          'to': '2024-05-07',
        }),
        dict({
          'from': '2024-09-10',
          'to': '2025-09-30',
        }),
      ]),
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_rc100930_supplier_import_l3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3655.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_scale_type]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt (11111112) Type',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_scale_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'EEG 7ngem',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_supplier]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Haushalt (11111112) Supplier',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_supplier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'EP Energie Plus GmbH',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_new]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 0,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Yearly import trend (current period)',
      'from': '2026-06-28T17:07:11.908041578',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 0.0,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-06-29T17:07:11.908041679',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_new',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[en-sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_old]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'days': 0,
      'device_class': 'energy',
      'friendly_name': 'Haushalt (11111112) Yearly import trend (previous period)',
      'from': '2026-06-28T17:07:11.908041155',
      'icon': 'mdi:transmission-tower-export',
      'per_day': 0.0,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'to': '2026-06-29T17:07:11.908041266',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netzooe_eservice_at0000000000000000000000011111112_yearly_trend_import_old',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
